# llmcontext

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
llmcontext/: __init__.py  __main__.py  llmcontext.py
tests/: test_exclusions.py  test_metadata.py
