[build-system]
requires = ["setuptools>=61.0"]  # Compatible with Python 3.8+
build-backend = "setuptools.build_meta"

[project]
name = "llmcontext"
version = "0.2.4"
description = "Generates project context for LLMs, respecting .gitignore."
readme = "README.md" 
requires-python = ">=3.8" # Specify minimum Python version
license = { text = "MIT" }  # TOML table format for Python 3.8 compatibility
authors = [
    { name = "Daniel Nyström", email = "daniel@nystrom.st" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Software Development",
    "Topic :: Utilities",
]
dependencies = [
    "Pillow>=9.0",
    "mutagen>=1.46",
]

[project.optional-dependencies]
test = ["pytest"]

[project.scripts]
llmcontext = "llmcontext:main"

[project.urls]
"Homepage" = "https://github.com/speakman/llmcontext"
"Bug Tracker" = "https://github.com/speakman/llmcontext/issues"
